# TripleR

./: .gitignore  CMakeLists.txt  README.md
src/: tripleR.cpp
src/graphics/: model.h  opengl.h  red_graphics.h  red_model.h  vulkan.h  vulkan_core.h  vulkan_model.h  vulkan_triangle.h
src/graphics/shaders/: compile_shader.bat  model.frag  model.mesh  model.vert  triangle.vert
src/os/: red_os.h
src/os/linux/: args.h  red_linux.h  timer.h
src/os/win32/: red_win32.h
