cmake_minimum_required(VERSION 3.15)
set (CMAKE_CXX_STANDARD 17)
project(TripleR)
add_subdirectory(src/external/volk)
add_subdirectory(src/external/meshoptimizer)
add_executable(TripleR WIN32 src/tripleR.cpp)
target_include_directories(TripleR PRIVATE src/external/volk)
target_include_directories(TripleR PRIVATE src/external/meshoptimizer/src)
target_link_libraries(TripleR PRIVATE volk_headers)
target_link_libraries(TripleR PRIVATE meshoptimizer)

# find_package(Vulkan QUIET)
#
# if (NOT CMAKE_VERSION VERSION_LESS 3.7.0)
#     message(STATUS "Using module to find Vulkan")
#     find_package(Vulkan)
# endif()
#
# IF(WIN32)
#     IF (NOT Vulkan_FOUND)
#         find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS ${CMAKE_SOURCE_DIR}/libs/vulkan)
#         IF (Vulkan_LIBRARY)
#             set(Vulkan_FOUND ON)
#             MESSAGE("Using bundled Vulkan library version")
#         ENDIF()
#     ELSE(NOT Vulkan_FOUND)
#         message("Vulkan found")
#     ENDIF()
# ENDIF(WIN32)
#target_link_libraries(TripleR PUBLIC Vulkan::Vulkan)
target_include_directories(TripleR PRIVATE ${Vulkan_INCLUDE_DIRS})
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
