cmake_minimum_required(VERSION 3.15)
set (CMAKE_CXX_STANDARD 17)
project(TripleR)
add_subdirectory(src/external/volk)

set(SHADERS_PATH ${PROJECT_SOURCE_DIR}/graphics/shaders)
find_program(GLSLANGVALIDATOR_COMMAND
        glslangValidator)
if(NOT GLSLANGVALIDATOR_COMMAND)
    message(FATAL_ERROR "glslangValidator required - source maintained at https://github.com/KhronosGroup/glslang")
else(NOT GLSLANGVALIDATOR_COMMAND)
    message("glslangValidator found")
endif()
add_custom_command(OUTPUT triangle.vert.spv
        COMMAND glslangValidator -V ${SHADERS_PATH}/triangle.vert -o ${SHADERS_PATH}/triangle.vert.spv)
add_subdirectory(src/external/meshoptimizer)
add_executable(TripleR WIN32 src/tripleR.cpp)
target_include_directories(TripleR PRIVATE src/external/volk)
target_include_directories(TripleR PRIVATE src/external/meshoptimizer/src)
target_include_directories(TripleR PRIVATE src/external/meshoptimizer/tools)
target_link_libraries(TripleR PRIVATE volk_headers)
target_link_libraries(TripleR PRIVATE meshoptimizer)

target_include_directories(TripleR PRIVATE ${Vulkan_INCLUDE_DIRS})
if(WIN32)
    add_definitions(-DVK_USE_PLATFORM_WIN32_KHR)
    target_link_libraries(TripleR PRIVATE Shlwapi)
endif()
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
